[package]
name = "mysqltui"
version = "0.1.0"
authors = ["Tannerin <qtulises@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
unicode-width = "0.1"
tui="0.14"
termion = "1.5"